<resources>
    <string name="app_name">ST Angelo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_kesonline">StAngelo</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_share">Share</string>
    <string name="mav_communicate">Communicate</string>
    <string name="nav_contact_us">Contact us</string>
    <string name="nav_find_us">Find Us</string>
    <string name="nav_signout">Signout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_btn_attendance">Attendance</string>
    <string name="home_btn_result">Result</string>
    <string name="home_btn_events">Events</string>
    <string name="home_btn_study_material">Study Material</string>
    <string name="home_btn_lets_talk">Lets Talk!</string>
    <string name="home_btn_notice">Notice</string>
    <string name="home_btn_about_us">FEE CALCULATOR</string>
    <string name="home_btn_academics"> GPA Calculator</string>
    <string name="about_us_our_story">Our Story</string>
    <string name="our_aims_and_objectives">Our Aims and Objectives</string>
    <string name="about_us_managing_committee">Managing Committee</string>
    <string name="about_us_infrastructure">Infrastructure</string>
    <string name="about_us_history_of_kes">History Of St Angelo</string>
    <string name="about_us_principal">From the Principal\'s Desk</string>
    <string name="about_us_motto_of_kes_alumni">Motto of ST Angelo alumni</string>
    <string name="about_us_mission">Vision and Mission</string>
    <string name="title_activity_our_story">our_story</string>
    <string name="wanna_know_about_us">Wanna Know About Us?</string>
    <string name="notice_add_notice">Add Notice</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_header_kandivali_education_society">St Angelo</string>
    <string name="kes_info">info@stangelo.com</string>
    <string name="feedback_enter_your_subject">Enter your Email</string>
    <string name="feedback_share_your_feedback">Share your Feedback...</string>
    <string name="feedback_send_feedback">Send Feedback</string>
    <string name="login_login_btn">LOGIN</string>
    <string name="login_enter_password">Enter Password</string>
    <string name="login_enter_email">Enter Email</string>
    <string name="profile_display_name">Display_Name</string>
    <string name="profile_i_am_using_kes_app">I am using St Angelo APP!</string>
    <string name="profile_change_image">Change Image</string>
    <string name="profile_change_status_and_name">Change Status and Name</string>
    <string name="study_material_bscit">BCIS</string>
    <string name="study_material_bes">BES</string>
    <string name="study_material_bbi">BBI</string>
    <string name="study_material_bftm">BFTM</string>
    <string name="study_material_bfm">BFM</string>
    <string name="study_material_bim">BIM</string>
    <string name="study_bscit_upload">upload</string>
    <string name="study_material_name">Material Name</string>
    <string name="study_material_chs">Chs</string>
    <string name="study_bcom">BCOM</string>
    <string name="study_material_ba">BA</string>
    <string name="study_material_bem">BEM</string>
    <string name="study_material_bmm">BMM</string>
    <string name="study_material_baf">BAF</string>
    <string name="study_material_bms">BMS</string>
    <string name="attachment">Attachment</string>
    <string name="Event_add_event">Add Event</string>
    <string name="download_brouchure">Download Brouchure</string>
    <string name="remove_event">Remove Event</string>
    <string name="image">Image</string>
    <string name="result_filename">Change your file name here</string>
    <string name="add_event">Add Event</string>
    <string name="event_detail_file_name">Event Detail File name</string>
    <string name="event_name">Event Name</string>
    <string name="choose">Choose</string>
    <string name="Email_prompt">Please enter your email here.</string>
    <string name="grade_prompt">Enter your grade, eg: A,A-,B,B-,...</string>
    <string name="fee_calculator">Fee Calculator</string>
    <string name="enter_your_email_id">Enter your email Id</string>
    <string name="what_kind_of_student_are_you">What kind of student are you?</string>
    <string name="domestic">Domestic</string>
    <string name="international">International</string>
    <string name="how_many_credits_do_you_plan_on_taking">How many Credits do you plan on taking?</string>
    <string name="your_estimated_tution_fee_is">Your estimated Tution Fee is:</string>
    <string name="send_email">Send Email</string>
    <string name="calculate">Calculate</string>
</resources>
