<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ufv.ca.abby.result">

    <ImageView
        android:id="@+id/result_banner"
        android:layout_width="wrap_content"
        android:layout_height="185dp"
        android:layout_alignParentTop="true"
        android:background="@color/Result"
        app:srcCompat="@drawable/result"
        android:contentDescription="@string/home_btn_result" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/result_banner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/result_bscit"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:background="@drawable/result_bg_color"
                android:layout_height="60dp"
                android:text="@string/study_material_bscit"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

            <Button
                android:id="@+id/result_bcom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textStyle="bold"
                android:background="@drawable/result_bg_color"
                android:text="@string/study_bcom"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

            <Button
                android:id="@+id/result_ba"
                android:textStyle="bold"
                android:background="@drawable/result_bg_color"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/study_material_ba"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"/>
            <Button
                android:id="@+id/result_bftm"
                android:layout_width="match_parent"
                android:background="@drawable/result_bg_color"
                android:layout_height="60dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:text="@string/study_material_bftm" />

            <Button
                android:id="@+id/result_bfm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/result_bg_color"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:text="@string/study_material_bfm" />

            <Button
                android:id="@+id/result_bim"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/result_bg_color"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:text="@string/study_material_bim" />
            <Button
                android:id="@+id/result_bbi"
                android:layout_width="match_parent"
                android:background="@drawable/result_bg_color"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/study_material_bbi"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
            <Button
                android:id="@+id/result_bes"
                android:background="@drawable/result_bg_color"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/study_material_bes"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
            <Button
                android:id="@+id/result_bem"
                android:background="@drawable/result_bg_color"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/study_material_bem"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
            <Button
                android:id="@+id/result_bmm"
                android:background="@drawable/result_bg_color"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textStyle="bold"
                android:text="@string/study_material_bmm"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
            <Button
                android:id="@+id/result_baf"
                android:layout_width="match_parent"
                android:background="@drawable/result_bg_color"
                android:textStyle="bold"
                android:layout_height="60dp"
                android:text="@string/study_material_baf"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
            <Button
                android:id="@+id/result_bms"
                android:background="@drawable/result_bg_color"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/study_material_bms"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
